<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/viewRequestsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_requests" />

    <Button
        android:id="@+id/createRequestBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_request"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/profileBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/thankYouBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thank_you_messages"
        android:layout_marginTop="16dp"/>

</LinearLayout>
