<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/volunteerIdInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:hint="@string/volunteer_id"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/messageInput"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:gravity="top"
        android:hint="@string/write_your_thank_you_message"
        android:inputType="textMultiLine"
        android:minLines="4"
        android:textColorHint="#8D6E63" />

    <Button
        android:id="@+id/sendMessageBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_message" />
</LinearLayout>
